gts-macros/tests/compile_fail/const_values_type_mismatch_int_to_bool.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/const_values_type_mismatch_int_to_bool.rs:20:1
   |
20 | / #[struct_to_gts_schema(
21 | |     dir_path = "schemas",
22 | |     base = MismatchIBoolBaseV1,
23 | |     schema_id = "gts.x.test.mismatch.ibool.v1~x.test.mismatch.int_to_bool.v1~",
...  |
26 | |     const_values = "enabled=1"
27 | | )]
   | |  ^
   | |  |
   | |__expected `bool`, found integer
   |    expected due to the type of this binding
   |
   = note: this error originates in the attribute macro `struct_to_gts_schema` (in Nightly builds, run with -Z macro-backtrace for more info)
